appId: org.cru.godtools.beta
name: LESSON - Lesson Testing (lesson1)
tags:
  - generated
  - lesson
  - tool-lesson1
---
- launchApp:
    stopApp: true
- runFlow: ../../../helpers/dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/tool/lesson/lesson1/en"
- runFlow: ../../../helpers/dismiss_open_app_prompt.yaml
- runFlow:
    when:
      visible:
        id: "Lesson Swipe Tutorial"
    commands:
      - tapOn: "Got it"
- assertVisible:
    id: "Lesson"
- assertVisible: "Lesson Testing"
- assertVisible: "Testing out the Lesson Renderer"
- takeScreenshot: "${SNAPSHOT_DIR}/lesson1/00-open"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lesson1/01-page-1"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lesson1/02-page-2"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lesson1/03-page-3"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lesson1/04-page-4"
