appId: org.cru.godtools.beta
name: LESSON - How to demonstrate the gospel with your life (lessondemogospel)
tags:
  - generated
  - lesson
  - tool-lessondemogospel
---
- launchApp:
    stopApp: true
- runFlow: ../../../helpers/dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/tool/lesson/lessondemogospel/en"
- runFlow: ../../../helpers/dismiss_open_app_prompt.yaml
- runFlow:
    when:
      visible:
        id: "Lesson Swipe Tutorial"
    commands:
      - tapOn: "Got it"
- assertVisible:
    id: "Lesson"
- assertVisible: "How to demonstrate the gospel with your life"
- assertVisible: "All Scripture Translation from New Living Translation (NLT)"
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/00-00-title-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/01-01-bulletlist-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/02-02-video-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/03-02a-novideo-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/04-02b-novideo-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/05-03-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/06-04-columnmultchoice-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/07-05-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/08-06-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/09-07-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/10-08-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/11-09-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/12-10-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/13-11-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/14-12-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/15-13-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/16-14-accordion-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/17-15-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/18-16-complete-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessondemogospel/19-17-resources-json"
