appId: org.cru.godtools.beta
name: LESSON - How to start spiritual conversations with your family (lessonfamily)
tags:
  - generated
  - lesson
  - tool-lessonfamily
---
- launchApp:
    stopApp: true
- runFlow: ../../../helpers/dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/tool/lesson/lessonfamily/en"
- runFlow: ../../../helpers/dismiss_open_app_prompt.yaml
- runFlow:
    when:
      visible:
        id: "Lesson Swipe Tutorial"
    commands:
      - tapOn: "Got it"
- assertVisible:
    id: "Lesson"
- assertVisible: "How to start spiritual conversations with your family"
- assertVisible: "All Scripture Translation from New Living Translation (NLT)"
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/00-00-title-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/01-01-bulletlist-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/02-02-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/03-03-multichoice-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/04-04-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/05-05-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/06-06-video-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/07-07-textbody-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/08-08-textbody-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/09-09-textbody-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/10-10-textbody-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/11-11-textbody-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/12-12-quiz-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/13-13-quizresults-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/14-14-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/15-15-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/16-16-complete-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessonfamily/17-17-resources-json"
