appId: org.cru.godtools.beta
name: LESSON - When to use a gospel invitation tool (lessongospeltool)
tags:
  - generated
  - lesson
  - tool-lessongospeltool
---
- launchApp:
    stopApp: true
- runFlow: ../../../helpers/dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/tool/lesson/lessongospeltool/en"
- runFlow: ../../../helpers/dismiss_open_app_prompt.yaml
- runFlow:
    when:
      visible:
        id: "Lesson Swipe Tutorial"
    commands:
      - tapOn: "Got it"
- assertVisible:
    id: "Lesson"
- assertVisible: "When to use a gospel invitation tool"
- assertVisible: "All Scripture Translation from New Living Translation (NLT)"
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/00-00-title-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/01-01-bulletlist-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/02-02-video-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/03-02a-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/04-02b-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/05-03-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/06-04-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/07-05-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/08-06-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/09-07-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/10-08-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/11-09-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/12-10-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/13-11-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/14-12-accordion-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/15-13-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/16-14-text-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/17-15-complete-json"
- swipe:
    start: 90%, 50%
    end: 10%, 50%
- takeScreenshot: "${SNAPSHOT_DIR}/lessongospeltool/18-16-resources-json"
