appId: org.cru.godtools.beta
name: Launch to menu
---
- launchApp:
    stopApp: true
- runFlow: dismiss_onboarding.yaml
- openLink: "godtools://org.cru.godtools/dashboard/tools"
- runFlow: dismiss_open_app_prompt.yaml
- assertVisible:
    id: "Dashboard Tools"
- tapOn:
    id: "Menu"
- assertVisible:
    id: "Menu"
